20100713_piki_기본 디자인 설정
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@348 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/design_sample/index.html
+++ b/WebContent/design_sample/index.html
@@ -20,9 +20,9 @@
   <meta name="distribution" content="global" />
   <meta name="description" content="Your page description here ..." />
   <meta name="keywords" content="Your keywords, keywords, keywords, here ..." />
-  <link rel="stylesheet" type="text/css" media="screen,projection,print" href="./css/mf42_layout4_setup.css" />
-  <link rel="stylesheet" type="text/css" media="screen,projection,print" href="./css/mf42_layout4_text.css" />
-  <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
+  <link rel="stylesheet" type="text/css" media="screen,projection,print" href="/html5/css/mf42_layout4_setup.css" />
+  <link rel="stylesheet" type="text/css" media="screen,projection,print" href="/html5/css/mf42_layout4_text.css" />
+  <link rel="icon" type="image/x-icon" href="/html5/img/favicon.ico" />
   <title>Multiflex-4.2 | Overview |</title>
 </head>
 
@@ -52,9 +52,9 @@
         <!-- Navigation Level 0 -->
         <div class="nav0">
           <ul>
-            <li><a href="#" title="English"><img src="./img/flag_greatbritain.png" alt="Image description" /></a></li>
-            <li><a href="#" title="Deutsch"><img src="./img/flag_germany.png" alt="Image description" /></a></li>
-            <li><a href="#" title="Svenska"><img src="./img/flag_sweden.png" alt="Image description" /></a></li>
+            <li><a href="#" title="English"><img src="/html5/img/flag_greatbritain.png" alt="Image description" /></a></li>
+            <li><a href="#" title="Deutsch"><img src="/html5/img/flag_germany.png" alt="Image description" /></a></li>
+            <li><a href="#" title="Svenska"><img src="/html5/img/flag_sweden.png" alt="Image description" /></a></li>
           </ul>
         </div>			
 
@@ -283,7 +283,7 @@
           <p>In 2006 I decided to start my own website. When surfing around I didn't find the template I needed. So I began to develop my own, with trials, errors and many long nights. About half a dozen experiments and six months later, I feel that I am coming closer to the design I need! But I will try to push it one step further, and make a liquid layout.</p>
           <p>I have profited much from others who have shared their CSS-knowledge on the internet. The best way to show my appreciation is by sharing my results with others. So if this template is what you were looking for, then feel free to use and enjoy it!</p>
           <p>If you want to get in touch with me, you can check my <a href="http://1234.info/"> website</a> or email me via <a href="http://www.oswd.org/user/profile/id/10227/">OSWD.org</a> contact form.</p>
-          <p class="center"><img class="center" src="./img/myphoto.jpg" alt="Image description" /></p>
+          <p class="center"><img class="center" src="/html5/img/myphoto.jpg" alt="Image description" /></p>
         </div>
 
         <!-- Subcontent unit -->
