--- a/WebContent/design_sample/mf42_layout2.html
+++ b/WebContent/design_sample/mf42_layout2.html
@@ -20,9 +20,9 @@
   <meta name="distribution" content="global" />
   <meta name="description" content="Your page description here ..." />
   <meta name="keywords" content="Your keywords, keywords, keywords, here ..." />
-  <link rel="stylesheet" type="text/css" media="screen,projection,print" href="./css/mf42_layout2_setup.css" />
-  <link rel="stylesheet" type="text/css" media="screen,projection,print" href="./css/mf42_layout2_text.css" />
-  <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
+  <link rel="stylesheet" type="text/css" media="screen,projection,print" href="/html5/css/mf42_layout2_setup.css" />
+  <link rel="stylesheet" type="text/css" media="screen,projection,print" href="/html5/css/mf42_layout2_text.css" />
+  <link rel="icon" type="image/x-icon" href="/html5/img/favicon.ico" />
   <title>Multiflex-4.2 | Layout-2 |</title>
 </head>
 
@@ -52,9 +52,9 @@
         <!-- Navigation Level 0 -->
         <div class="nav0">
           <ul>
-            <li><a href="#" title="English"><img src="./img/flag_greatbritain.png" alt="Image description" /></a></li>
-            <li><a href="#" title="Deutsch"><img src="./img/flag_germany.png" alt="Image description" /></a></li>
-            <li><a href="#" title="Svenska"><img src="./img/flag_sweden.png" alt="Image description" /></a></li>
+            <li><a href="#" title="English"><img src="/html5/img/flag_greatbritain.png" alt="Image description" /></a></li>
+            <li><a href="#" title="Deutsch"><img src="/html5/img/flag_germany.png" alt="Image description" /></a></li>
+            <li><a href="#" title="Svenska"><img src="/html5/img/flag_sweden.png" alt="Image description" /></a></li>
           </ul>
         </div>			
 
@@ -234,14 +234,14 @@
         <p class="right">Text right.</p>
 
         <h3>Image<br />(text align left)</h3>
-        <p><img src="./img/image.jpg" width="50" alt="Image description" title="Image title" />Here is place for text.</p>
-        <p><img class="center" src="./img/image.jpg" width="50" alt="Image description" title="Image title" /></p>
-        <p><img class="right" src="./img/image.jpg" width="50" alt="Image description" title="Image title" />Here is place for text.</p>
+        <p><img src="/html5/img/image.jpg" width="50" alt="Image description" title="Image title" />Here is place for text.</p>
+        <p><img class="center" src="/html5/img/image.jpg" width="50" alt="Image description" title="Image title" /></p>
+        <p><img class="right" src="/html5/img/image.jpg" width="50" alt="Image description" title="Image title" />Here is place for text.</p>
 
         <h3>Image<br />(text align right)</h3>
-        <p class="right"><img src="./img/image.jpg" width="50" alt="Image description" title="Image title" />Here is place for text.</p>
-        <p class="right"><img class="center" src="./img/image.jpg" width="50" alt="Image description" title="Image title" /></p>
-        <p class="right"><img class="right" src="./img/image.jpg" width="50" alt="Image description" title="Image title" />Here is place for text.</p>
+        <p class="right"><img src="/html5/img/image.jpg" width="50" alt="Image description" title="Image title" />Here is place for text.</p>
+        <p class="right"><img class="center" src="/html5/img/image.jpg" width="50" alt="Image description" title="Image title" /></p>
+        <p class="right"><img class="right" src="/html5/img/image.jpg" width="50" alt="Image description" title="Image title" />Here is place for text.</p>
 
         <!-- Image Links -->
         <h3>Text link</h3>
@@ -249,9 +249,9 @@
 
         <!-- Image Links -->
         <h3>Image link</h3>
-        <p><a href="#"><img src="./img/image.jpg" width="50" alt="Image description" title="Image title" /></a>Text as in image sections above.</p>
-        <p class="center"><a href="#"><img class="center" src="./img/image.jpg" width="50" alt="Image description" title="Image title" /></a></p>
-        <p><a href="#"><img class="right" src="./img/image.jpg" width="50" alt="Image description" title="Image title" /></a>Text as in image sections above.</p>     
+        <p><a href="#"><img src="/html5/img/image.jpg" width="50" alt="Image description" title="Image title" /></a>Text as in image sections above.</p>
+        <p class="center"><a href="#"><img class="center" src="/html5/img/image.jpg" width="50" alt="Image description" title="Image title" /></a></p>
+        <p><a href="#"><img class="right" src="/html5/img/image.jpg" width="50" alt="Image description" title="Image title" /></a>Text as in image sections above.</p>     
       </div>
  
       <!-- B.1 MAIN CONTENT -->
@@ -356,18 +356,18 @@
           <h1>Main heading above image</h1>
           <h1>Heading h1</h1>
           <h3>Heading h3</h3>                    
-          <p><img src="./img/image.jpg" alt="Image description" title="Image title" />Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostruderci tation ullamcorper suscipit lobortis nisl ut aliquip. orem ipsum dolor sit amet.</p>              
-          <p><img class="center" src="./img/image.jpg" alt="Image description" title="Image title" /></p>
+          <p><img src="/html5/img/image.jpg" alt="Image description" title="Image title" />Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostruderci tation ullamcorper suscipit lobortis nisl ut aliquip. orem ipsum dolor sit amet.</p>              
+          <p><img class="center" src="/html5/img/image.jpg" alt="Image description" title="Image title" /></p>
           <h1>Heading h1</h1>
           <h3>Heading h3</h3>          
-          <p><img class="right" src="./img/image.jpg" alt="Image description" title="Image title" />Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostruderci tation ullamcorper suscipit lobortis nisl ut aliquip. orem ipsum dolor sit amet.</p>              
+          <p><img class="right" src="/html5/img/image.jpg" alt="Image description" title="Image title" />Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostruderci tation ullamcorper suscipit lobortis nisl ut aliquip. orem ipsum dolor sit amet.</p>              
 
           <h1>Main heading beside image</h1>
-          <h1 class="side"><img src="./img/image.jpg" alt="Image description" title="Image title" />Heading h1</h1>
+          <h1 class="side"><img src="/html5/img/image.jpg" alt="Image description" title="Image title" />Heading h1</h1>
           <h3 class="side">Heading h3</h3>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostruderci tation ullamcorper suscipit lobortis nisl ut aliquip. orem ipsum dolor sit amet.</p>              
-          <p><img class="center" src="./img/image.jpg" alt="Image description" title="Image title" /></p>
-          <h1 class="side"><img class="right" src="./img/image.jpg" alt="Image description" title="Image title" />Heading h1</h1>
+          <p><img class="center" src="/html5/img/image.jpg" alt="Image description" title="Image title" /></p>
+          <h1 class="side"><img class="right" src="/html5/img/image.jpg" alt="Image description" title="Image title" />Heading h1</h1>
           <h3 class="side">Heading h3</h3>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostruderci tation ullamcorper suscipit lobortis nisl ut aliquip. orem ipsum dolor sit amet.</p>              
         </div>          
@@ -434,9 +434,9 @@
           <p>Lorem ipsum dolor sit amet, consectetuer <a href="#">Aliquam at Libero</a>.</p>
 
           <h5>Image link</h5>
-          <p><a href="#"><img src="./img/image.jpg" alt="Image description" title="Image title" /></a></p>
-          <p><a href="#"><img class="center" src="./img/image.jpg" alt="Image description" title="Image title" /></a></p>
-          <p><a href="#"><img class="right" src="./img/image.jpg" alt="Image description" title="Image title" /></a></p>
+          <p><a href="#"><img src="/html5/img/image.jpg" alt="Image description" title="Image title" /></a></p>
+          <p><a href="#"><img class="center" src="/html5/img/image.jpg" alt="Image description" title="Image title" /></a></p>
+          <p><a href="#"><img class="right" src="/html5/img/image.jpg" alt="Image description" title="Image title" /></a></p>
         </div>
         <hr class="clear-contentunit" />                
                     
