Server-Sent Event. Sample 파일 등록 및 불필요 파일 삭제
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@460 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/sse/sample/sseClient.html
+++ b/WebContent/sse/sample/sseClient.html
@@ -123,7 +123,7 @@
      * Init event source in WebKit fashion
      */
     var webkitEventSource = function() {
-      var eventSrc = new EventSource('b.jsp');
+      var eventSrc = new EventSource('sseServer.jsp');
       eventSrc.addEventListener('message', onMessageHandler);
     }
 
@@ -140,4 +140,4 @@
 }());// -->
 </script>
 </body>   
-</html><event-source src="" />
+</html><event-source src="sseServer.jsp" />
