--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
